--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "start:ios": "react-native start --port=8082",
+    "start:android": "react-native start --port=8081",
+    "ios": "react-native run-ios --port=8082",
+    "android": "react-native run-android --port=8081"
   },
   "dependencies": {
     "react": "18.2.0",
